wawe stuck fix

--- a/src/style/Waves.css
+++ b/src/style/Waves.css
@@ -18,7 +18,7 @@
   fill: #1d1e22;
 }
 
-/** For mobile devices **/
+
 @media (max-width: 900px) {
   .custom-shape-divider-top-1665752761 svg {
     width: calc(100% + 1.3px);
@@ -27,7 +27,7 @@
 }
 
 .custom-shape-divider-bottom-1665754153 {
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -48,7 +48,7 @@
   fill: #1d1e22;
 }
 
-/** For mobile devices **/
+
 @media (max-width: 900px) {
   .custom-shape-divider-bottom-1665754153 {
     position: relative;
